# switchbot-desktop

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  switchbot.rs
src-tauri/src/switchbot/: api.rs  bot.rs  command.rs  fan.rs  light.rs  lock.rs
src/components/: DeviceList.tsx  DeviceListItem.tsx  Form.tsx  Modal.tsx
src/components/Device/: Bot.tsx  Fan.tsx  Light.tsx  Lock.tsx
src/hooks/: useDevices.ts  useModal.ts
src/types/: switchbot.ts
