[package]
name = "switchbot-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1.10.0"
reqwest = { version = "0.12.7", features = ["json"] }
base64 = "0.22.1"
sha2 = "0.10.8"
chrono = "0.4.38"
hmac = "0.12.1"
ring = "0.17.8"
confy = { version = "0.6.1", features = [
  "yaml_conf",
], default-features = false }
strum = { version = "0.26.3", features = ["derive"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
